--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- Custom Styles -->
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Coda+Caption:800&display=swap" rel="stylesheet">
 
 	<!-- jQuery 3.3.1 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -738,32 +739,31 @@
 					<div class="fix-12-12 toCenter smallmargin">
 						<p class="ae-3 left fromLeft">The first interesting outcome regards the employment of <em>metaphors</em>.</p>
 						<p class="ae-3 left fromLeft"><span class="opacity-8"> In almost all the Rally speeches of our corpus we found a marked strand represented by similar metaphors. We find a close similarity in the employed semantics of the following metaphors:</span></p>
-						<p class="ae-3 center fromLeft">They’re pursuing the insane impeachment witch hunt. <span class="opacity-8">Trump</span></p>
-						<p class="ae-3 center fromLeft">This is nothing but a partisan witch hunt, sabotage. <span class="opacity-8">Trump</span></p>
-						<p class="ae-3 center fromLeft">The trial of the ghosts of history that never return.<span class="opacity-8"> Salvini</span></p>
-						<p class="ae-3 center fromLeft">Democrats are on a crusade to destroy our democracy. <span class="opacity-8">Trump</span></p>
-						<p class="ae-3 center fromLeft">They’ll give me Pinocchios. <span class="opacity-8"> Trump</span></p>
-						<p class="ae-3 center fromLeft">I had a lot of the rhinos fighting me. <span class="opacity-8">Trump</span></p>
-						<p class="ae-3 center fromLeft">There is a tyrannical father. <span class="opacity-8">Salvini</span></p>
+						<p class="ae-3 center fromLeft flash">They’re pursuing the insane impeachment witch hunt. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft flash">This is nothing but a partisan witch hunt, sabotage. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft flash">The trial of the ghosts of history that never return.<span class="opacity-8"> Salvini</span></p>
+						<p class="ae-3 center fromLeft flash">Democrats are on a crusade to destroy our democracy. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft flash">They’ll give me Pinocchios. <span class="opacity-8"> Trump</span></p>
+						<p class="ae-3 center fromLeft flash">I had a lot of the rhinos fighting me. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft flash">There is a tyrannical father. <span class="opacity-8">Salvini</span></p>
 						<p class="ae-3 left fromLeft"><span class="opacity-8">All these metaphors evoke the presence of a reckless persecutor, embodied by different political players. EU, Democrats and political opponents are the favorite actor performing a pointless hunt against the speaker. Witch hunt, trial of ghosts from the past, crusade: all these terms convey the idea of foolishness and ferocity. The speaker end up to be the <em>victims</em> of a senseless hunt.</span></p>
 					</div>
 					<div class="fix-12-12 toCenter smallmargin">
 						<p class="ae-3 left fromLeft">The second point of interested is <em>opposition</em></p>
 						<p class="ae-3 left fromLeft"><span class="opacity-8"> The construction of two different polarity is a crucial point in the RWP rhetorics. It is often expressed by the creation of the so called ‘black-and-white’’ rhetorics (Blassnig e al., 2018). Thanks to a Manichean and moralistic juxtaposition between the two parts it’s possible to individuate different recurrent couples:</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">"good people" and the "evil elite"</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">“speaker” and “partisan media”</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">“homeland” and “evil economic powers”</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">“traditions” and “gender ideology”</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">“religion” and “profanity of abortion”</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">"good people" and the "evil elite"</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">“speaker” and “partisan media”</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">“homeland” and “evil economic powers”</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">“traditions” and “gender ideology”</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">“religion” and “profanity of abortion”</span></p>
 						<p class="ae-3 left fromLeft"><span class="opacity-8">This simple but effective fallacies convey the sense of confusion and insecurity that invite the audience to identify the guilts of their issues in simpler targets. </span></p>
-						<p class="ae-3 fromLeft"><span class="opacity-8"></span></p>
 					</div>
 					<div class="fix-12-12 toCenter smallmargin">
 						<p class="ae-3 left fromLeft">The last trope worth to mention, it’s the most identificative feature of RWP, the idea of <em>_My Country_ First </em>.</p>
 						<p class="ae-3 left fromLeft"><span class="opacity-8">The idea is embodied in the following statements:</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">America first</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">Prima gli Italiani</span></p>
-						<p class="ae-3 center fromLeft"><span class="opacity-8">Brasil acima de tudo</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">America first</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">Prima gli Italiani</span></p>
+						<p class="ae-3 center fromLeft flash"><span class="opacity-8">Brasil acima de tudo</span></p>
 						<p class="ae-3 left fromLeft"><span class="opacity-8">These simple but significative slogans are the core of the RWP rhetorics. The sovereignty issue turns into a reorganization of priorities in which the superiority of the homeland and its citizens. The key of the discourse becomes a matter of reappropriation of agency in the political and international environment, with a will of prevarication over others, and the idea of revenge against the wounds of a humiliating past. </span><p>
 					</div>
 			</div>
@@ -787,7 +787,7 @@
             <p class="margin-bottom-2 ae-1"><span class="opacity-6">Uncovering the Unpsoken Patterns</p>
             <h1 class="ae-2 huge fromAbove margin-bottom-2">Distant Reading</h1>
           </div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>In order to gain a better understanding of the explicit and implicit information present in the corpus, we analyzed the corpus through distant reading. We were interested in taking note of trends only perceivable at larger levels of analysis—such as the most common topics, words, and sentences, the kinds of topics the speeches contain and share, the emotional content, as well as the level of complexity of the texts.</p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"></span>In order to gain a better understanding of the explicit and implicit information present in the corpus, we analyzed the corpus through distant reading. We were interested in taking note of trends only perceivable at larger levels of analysis—such as the most common topics, words, and sentences, the kinds of topics the speeches contain and share, the emotional content, as well as the level of complexity of the texts.</p>
           <ul class="grid fixedSpaces left margin-top-10">
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
              <h3>Top Pop Words</h3>
@@ -854,7 +854,7 @@
 						<p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
 						<h1 class="ae-2 huge fromAbove margin-bottom-2">Top Pop Words</h1>
 					</div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We analyzed each speech and the corpus as a whole for the frequencies of words to find the most common words and word phrases. We did this analysis in general and also for specific topic words, such as religio and nationalism. Feel free to download our word frequency analysis Python code to try this out in your own corpus.</p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"></span>We analyzed each speech and the corpus as a whole for the frequencies of words to find the most common words and word phrases. We did this analysis in general and also for specific topic words, such as religio and nationalism. Feel free to download our word frequency analysis Python code to try this out in your own corpus.</p>
 
 					<!-- Python code Top Pop Words-->
 
@@ -1050,7 +1050,7 @@
             <p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
             <h1 class="ae-2 huge fromAbove margin-bottom-2">Key Words</h1>
           </div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We also analyzed the frequency of words related to topics of our interest--religion and nationalism-- and compared the speeches to each other.</p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"></span>We also analyzed the frequency of words related to topics of our interest--religion and nationalism-- and compared the speeches to each other.</p>
           <ul class="grid fixedSpaces left margin-top-10">
             <li class="col-12-12 col-tablet-1-1 col-phablet-1-1 ae-4 fromLeft">
              <h3>Religion</h3>
@@ -1079,7 +1079,7 @@
 
 				<div class="fix-10-12 topmargin">
 					<h1 class="ae-1">Lexical Space Analysis</h1>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We wanted to determine what the complexity of the speeches was. As such, we automatically assessed the reading level and the Dale Chall score for each of the speeches. We also analyzed the amount of unique words in each speech. You can find our python code below.</p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"></span>We wanted to determine what the complexity of the speeches was. As such, we automatically assessed the reading level and the Dale Chall score for each of the speeches. We also analyzed the amount of unique words in each speech. You can find our python code below.</p>
 
 					<!-- Python code Lexical Space Analysis-->
 
@@ -1221,7 +1221,7 @@
 						<li class="col-4-12 left">
 							<p class="ae-3 fromLeft"><span class="opacity-8">The following graph portrays the number of unique words (tokenized) in each of the speeches, which we deem as an indicator of the complexity of the speeches. However, it is important to take into account that the unique token amount is related to the length of each of the speeches, which is strongly affecting the results. </span></p>
 						</li>
-						<li class="col-6-12 left ae-5 fromCenter">
+						<li class="col-8-12 left ae-5 fromCenter">
 							<div class="shadow rounded">
 								<img class="wide" src="assets/img/distantreading/lexicalanalysis/unique_words.png"/>
 							</div>
@@ -1246,8 +1246,8 @@
             <p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
             <h1 class="ae-2 huge fromAbove margin-bottom-2">Topic Modelling</h1>
           </div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>For the topic modelling, we started by cleaning the data in another way compared to the other scripts (without pickle). The workflow, however, stayed similar and the data cleaning was developed similarly (remove stopwords, parentesis and accents). The whole corpora was also lemmatized (+ formed bigrams and trigrams).</p>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We then emploted an LDA algorithm to find 4 topics. Check out the python code and the explanation below!</p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"></span>For the topic modelling, we started by cleaning the data in another way compared to the other scripts (without pickle). The workflow, however, stayed similar and the data cleaning was developed similarly (remove stopwords, parentesis and accents). The whole corpora was also lemmatized (+ formed bigrams and trigrams).</p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"></span>We then emploted an LDA algorithm to find 4 topics. Check out the python code and the explanation below!</p>
 				</div>
 
 					<!-- Python code Lexical Space Analysis-->
@@ -1325,39 +1325,42 @@
 					</p>
 
 					<div class="fix-12-12 toCenter topmargin">
-						<p class="ae-3 fromLeft"><span class="opacity-8">For the topic modelling itself we used an LDA algorithm, by using the <a href=”https://radimrehurek.com/gensim/”>gensim library</a>. We decided to create 4 topics for the whole collection of documents. Each topic is created with unsupervised learning, and is defined by a set of words, each with a weight. We named the four resulting topics as: 0. Respect the country, 1. Work and go vote, 2. People's greatness, and 3. National power and activity.</span></p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8">For the topic modelling itself we used an LDA algorithm, by using the <a href=”https://radimrehurek.com/gensim/”>gensim library</a>. We decided to create 4 topics for the whole collection of documents. Each topic is created with unsupervised learning, and is defined by a set of words, each with a weight. We named the four resulting topics as: 0. Respect the country, 1. Work and go vote, 2. People's greatness, and 3. National power and activity.</span></p>
 					</div>
 
 					<div class="fix-12-12 toCenter topmargin">
 						<h1 class="ae-2 left fromLeft">Main Topics in our Corpus</h1>
-						<ul class="grid fixedSpaces left margin-top-10">
+						<ul class="grid fixedSpaces left">
 							<li class="col-12-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
 								<p class="tiny opacity-6">First, we analyzed the topics themselves, by creating word-clouds of the topics’ words.</p>
 								<h3>Word Clouds </h3>
 							 <div class="price ae-5"><img src="assets/img/distantreading/topicmodelling/wordclouds.png"/></div>
 							</li>
 							<li class="col-12-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
-											<p class="tiny opacity-6">To understand how each topic was defined by the unsupervised algorithm, check out the graphs below. In it you can see the words present in each topic, the wordcount and the weight of the corresponding vector.</p>
-								<h3>Topic Count Weights </h3>
-											<div class="price ae-5"><img src="assets/img/distantreading/topicmodelling/topiccountweights.png"/></div>
+								<p class="tiny opacity-6">To understand how each topic was defined by the unsupervised algorithm, check out the graphs below. In it you can see the words present in each topic, the wordcount and the weight of the corresponding vector.</p>
+								<h3 clas="margin-top-10">Topic Count Weights </h3>
+								<div class="price ae-5"><img src="assets/img/distantreading/topicmodelling/topiccountweights.png"/></div>
 							</li>
 						</ul>
 					</div>
 
 
-					<div class="fix-12-12 toCenter topmargin">
-						<p class="tiny opacity-6">
+					<div class="fix-12-12 left toCenter topmargin">
+						<h1 class="ae-2 left fromLeft">Speeches and Topics</h1>
+						<p class="tiny left opacity-6">
 							We then searched for the best fit of topic to document. We found the following results:
-							<li class="col-12-12 center ae-5 fromCenter">Document 0 (BOLSONARO - Minister of defence speech) <span class="opacity-8">Topic 3: National power and activity.</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 1 (BOLSONARO - Inaugural Speech) <span class="opacity-8">Topic 0: Respect the Country</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 2 (BOLSONARO - United Nation Speech) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 3 (SALVINI - Senate Speech) <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 4 (SALVINI - Piazza Duomo Speech) <span class="opacity-8">Topic 0: Respect the Country</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 5 (TRUMP - Minnsota rally Speech) <span class="opacity-8">Topic 2: People’s Greatness</span></li>
-							<li class="col-12-12 center ae-5 fromCenter">Document 6 (TRUMP - Inaugural Speech) <span class="opacity-8">Topic 3: National power and activity.</span></li></p>
-						<p class="tiny opacity-6">In the last step, by using pyLDAvis from Gensim library we created an interactive representation of every topic with the corresponding words. Check it out below!</p>
-						<h1 class="ae-2 left fromLeft">An Interactive Topic Modelling Representation</h1>
-						<iframe src="assets/topic_modelling.html" class="ifameclass"></iframe>
+							<li class="col-12-12 left  ae-5 fromCenter">BOLSONARO - Minister of defence speech <span class="opacity-8">Topic 3: National power and activity.</span></li>
+							<li class="col-12-12 left  ae-5 fromCenter">BOLSONARO - Inaugural Speech <span class="opacity-8">Topic 0: Respect the Country</span></li>
+							<li class="col-12-12 left  ae-5 fromCenter">BOLSONARO - United Nation Speech <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
+							<li class="col-12-12 left  ae-5 fromCenter">SALVINI - Senate Speech <span class="opacity-8">Topic 1: Work and Go Vote</span></li>
+							<li class="col-12-12 left  ae-5 fromCenter">SALVINI - Piazza Duomo Speech <span class="opacity-8">Topic 0: Respect the Country</span></li>
+							<li class="col-12-12 left  ae-5 fromCenter">TRUMP - Minnsota rally Speech <span class="opacity-8">Topic 2: People’s Greatness</span></li>
+							<li class="col-12-12 left  ae-5 fromCenter">TRUMP - Inaugural Speech <span class="opacity-8">Topic 3: National power and activity.</span></li></p>
+						</div>
+						<div class="fix-12-12 left toCenter topmargin">
+							<h1 class="ae-2 left fromLeft">An Interactive Topic Modelling Representation</h1>
+							<p class="tiny opacity-6">In the last step, by using pyLDAvis from Gensim library we created an interactive representation of every topic with the corresponding words. Check it out below!</p>
+							<iframe src="assets/topic_modelling.html" class="ifameclass"></iframe>
 					</div>
 
 					</div>
