--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 					</div>
 				</div>
-				<p class="margin-bottom-2 ae-1 counter">COUNTER</p>
+				<!-- <p class="margin-bottom-2 ae-1 counter">COUNTER</p> -->
 				<div class="fix-12-12 topmargin">
 					<ul class="grid">
 						<li class="col-3-12  ae-4 fromLeft">
