--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
 							<div class="fix-12-12 ">
 								<ul class="grid">
 									<li class="col-12-12 center ae-5 fromCenter">
-										<a href="assets/ontology/owlfiles/asap.owl"><button class="button black gradient ae-4">Download the OWL file for ASAP</button></a>
+										<a href="asap.owl"><button class="button black gradient ae-4">Download the OWL file for ASAP</button></a>
 									</li>
 								</ul>
 							</div>
@@ -1647,7 +1647,7 @@
 							<div class="fix-12-12">
 								<ul class="grid">
 									<li class="col-12-12 center ae-5 fromCenter">
-										<a href="assets/ontology/owlfiles/asap.owl"><button class="button black gradient ae-4">Download the OWL file for ASAP</button></a>
+										<a href="asapkb.owl"><button class="button black gradient ae-4">Download the OWL file for the Knowledge Base</button></a>
 									</li>
 								</ul>
 							</div>
@@ -1662,7 +1662,7 @@
 					<ul class="grid">
 						<li class="col-12-12 ae-5 fromCenter">
 							<div class="shadow rounded">
-								<iframe id="webvowl" src="ontology/webvowl/index.html#"></iframe>
+								<iframe id="webvowl" src="http://www.visualdataweb.de/webvowl/#file=ASAP.owl"></iframe>
 							</div>
 						</li>
 
