--- a/index.html
+++ b/index.html
@@ -1662,7 +1662,7 @@
 					<ul class="grid">
 						<li class="col-12-12 ae-5 fromCenter">
 							<div class="shadow rounded">
-								<iframe id="webvowl" src="http://www.visualdataweb.de/webvowl/#file=ASAP.owl"></iframe>
+								<iframe id="webvowl" src="http://www.visualdataweb.de/webvowl/#iri=https://popwords.github.io/ASAP.owl"></iframe>
 							</div>
 						</li>
 
