--- a/index.html
+++ b/index.html
@@ -1647,7 +1647,7 @@
 							<div class="fix-12-12">
 								<ul class="grid">
 									<li class="col-12-12 center ae-5 fromCenter">
-										<a href="asapkb.owl"><button class="button black gradient ae-4">Download the OWL file for the Knowledge Base</button></a>
+										<a href="asapKB.owl" target="_blank"><button class="button black gradient ae-4">Download the OWL file for the Knowledge Base</button></a>
 									</li>
 								</ul>
 							</div>
@@ -1684,9 +1684,6 @@
 				<div class="fix-10-12 ">
 					<h1 class="ae-1">ASAP Evaluation</h1>
 					<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="ontology/oops/oopsEval.html">Check out</a> our ontology's evaluation by the OntOlogy Pitfall Scanner! <a href="http://oops.linkeddata.es/" target="_blank">(OOPS!)</a></span></p>
-					<div class="shadow rounded">
-						<iframe id="webvowl" src="ontology/oops/oopsEval.html"></iframe>
-					</div>
 				</div>
 
 
