--- a/index.html
+++ b/index.html
@@ -1054,12 +1054,12 @@
           <ul class="grid fixedSpaces left margin-top-10">
             <li class="col-12-12 col-tablet-1-1 col-phablet-1-1 ae-4 fromLeft">
              <h3>Religion</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading/toppopwords/religion_words.png" height="400"/></div>
+						 <div class="price ae-5"><a href="assets/img/distantreading/toppopwords/religion_words.png" target="_blank"><img src="assets/img/distantreading/toppopwords/religion_words.png" height="400"/></a></div>
              <p class="tiny opacity-6">Presence of the words: Bible, Gospel, God, Mary</p>
             </li>
             <li class="col-12-12 col-tablet-1-1 col-phablet-1-1 ae-5 fromLeft">
              <h3>Nationalism</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading/toppopwords/nationalism.png" height="400"/></div>
+						 <div class="price ae-5"><a href="assets/img/distantreading/toppopwords/nationalism.png" target="_blank"><img src="assets/img/distantreading/toppopwords/nationalism.png" height="400"/></a></div>
 						 <p class="tiny opacity-6">Presence of the words: state, nation, country, brazil, italy, united states</p>
             </li>
           </ul>
@@ -1223,7 +1223,8 @@
 						</li>
 						<li class="col-8-12 left ae-5 fromCenter">
 							<div class="shadow rounded">
-								<img class="wide" src="assets/img/distantreading/lexicalanalysis/unique_words.png"/>
+								<a href="assets/img/distantreading/lexicalanalysis/unique_words.png" target="_blank">
+								<img class="wide" src="assets/img/distantreading/lexicalanalysis/unique_words.png"/></a>
 							</div>
 						</li>
 					</ul>
