--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@
 						<div class="fix-12-12 left toCenter topmargin">
 							<h1 class="ae-2 left fromLeft">An Interactive Topic Modelling Representation</h1>
 							<p class="tiny opacity-6">In the last step, by using pyLDAvis from Gensim library we created an interactive representation of every topic with the corresponding words. Check it out below!</p>
-							<iframe src="assets/topic_modelling.html" class="ifameclass"></iframe>
+							<iframe src="assets/topic_modelling.html" class="ifameclass topicIframe"></iframe>
 					</div>
 
 					</div>
