--- a/index.html
+++ b/index.html
@@ -1413,7 +1413,11 @@
 							<div class="price ae-5">0.55</div>
 							<div class="ae-5">
 								<h6 class="uppercase bold small opacity-4">Subjectivity Score</h6>
+								<br>
+								<h5 class="uppercase bold small opacity-4">AYLIEN POLARITY: positive</h5>
+								<h5 class="uppercase bold small opacity-4">AYLIEN SUBJECTIVITY: subjective</h5>
 							</div>
+
 						</li>
 						<li class="col-6-12 ae-3" style="background: #F5FBFE">
 							<h3>Trump's Minnesota Rally Speech</h3>
@@ -1424,6 +1428,9 @@
 							<div class="price ae-5">0.41</div>
 							<div class="ae-5">
 								<h6 class="uppercase bold small opacity-4">Subjectivity Score</h6>
+								<br>
+								<h5 class="uppercase bold small opacity-4">AYLIEN POLARITY: positive</h5>
+								<h5 class="uppercase bold small opacity-4">AYLIEN SUBJECTIVITY: subjective</h5>
 							</div>
 						</li>
 						<li class="col-6-12 ae-3" style="background: #F5FBFE">
@@ -1435,6 +1442,9 @@
 							<div class="price ae-5">0.47</div>
 							<div class="ae-5">
 								<h6 class="uppercase bold small opacity-4">Subjectivity Score</h6>
+								<br>
+								<h5 class="uppercase bold small opacity-4">AYLIEN POLARITY: positive</h5>
+								<h5 class="uppercase bold small opacity-4">AYLIEN SUBJECTIVITY: subjective</h5>
 							</div>
 						</li>
 						<li class="col-6-12 ae-3" style="background: #F5FBFE">
@@ -1446,6 +1456,9 @@
 							<div class="price ae-5">0.41</div>
 							<div class="ae-5">
 								<h6 class="uppercase bold small opacity-4">Subjectivity Score</h6>
+								<br>
+								<h5 class="uppercase bold small opacity-4">AYLIEN POLARITY: positive</h5>
+								<h5 class="uppercase bold small opacity-4">AYLIEN SUBJECTIVITY: subjective</h5>
 							</div>
 						</li>
 						<li class="col-6-12 ae-3" style="background: #F5FBFE">
@@ -1457,6 +1470,9 @@
 							<div class="price ae-5">0.51</div>
 							<div class="ae-5">
 								<h6 class="uppercase bold small opacity-4">Subjectivity Score</h6>
+								<br>
+								<h5 class="uppercase bold small opacity-4">AYLIEN POLARITY: neutral</h5>
+								<h5 class="uppercase bold small opacity-4">AYLIEN SUBJECTIVITY: subjective</h5>
 							</div>
 						</li>
 						<li class="col-6-12 ae-3" style="background: #F5FBFE">
@@ -1468,6 +1484,9 @@
 							<div class="price ae-5">0.44</div>
 							<div class="ae-5">
 								<h6 class="uppercase bold small opacity-4">Subjectivity Score</h6>
+								<br>
+								<h5 class="uppercase bold small opacity-4">AYLIEN POLARITY: neutral</h5>
+								<h5 class="uppercase bold small opacity-4">AYLIEN SUBJECTIVITY: subjective</h5>
 							</div>
 						</li>
 					</ul>
@@ -1482,7 +1501,7 @@
 						</li>
 						<li class="col-6-12 left ae-5 fromCenter">
 							<div class="shadow rounded">
-								<img class="wide" src="assets/img/distantreading/sentimentanalysis/polarity_subjectivity.png"/>
+								<a href="assets/img/distantreading/sentimentanalysis/polarity_subjectivity.png" target="_blank"><img class="wide" src="assets/img/distantreading/sentimentanalysis/polarity_subjectivity.png"/></a>
 							</div>
 						</li>
 					</ul>
@@ -1496,7 +1515,7 @@
 						</li>
 						<li class="col-6-12 left ae-5 fromCenter">
 							<div class="shadow rounded">
-								<img class="wide" src="assets/img/distantreading/sentimentanalysis/sentiment_time_all.png"/>
+								<a href="assets/img/distantreading/sentimentanalysis/sentiment_time_all.png" target="_blank"><img class="wide" src="assets/img/distantreading/sentimentanalysis/sentiment_time_all.png"/></a>
 							</div>
 						</li>
 					</ul>
