--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@
 
 				<div class="fix-10-12 ">
 					<h1 class="ae-1">ASAP Evaluation</h1>
-					<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="ontology/oops/oopsEval.html">Check out</a> our ontology's evaluation by the OntOlogy Pitfall Scanner! <a href="http://oops.linkeddata.es/" target="_blank">(OOPS!)</a></span></p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="ontology/OOPSevaluation/oopsEval.html">Check out</a> our ontology's evaluation by the OntOlogy Pitfall Scanner! <a href="http://oops.linkeddata.es/" target="_blank">(OOPS!)</a></span></p>
 				</div>
 
 
