--- a/ontology/index-en.html
+++ b/ontology/index-en.html
@@ -6,7 +6,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://popwords.github.io/asap.owl","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://popwords.github.io/asap.owl","name":"ASAP Ontology - Analyze Speech Acts by Politicians", "headline":"Document describing the ontology https://popwords.github.io/asap.owl", "datePublished":"Mon Nov 25 14:43:46 CET 2019", "version":"1.0.0", "author":[{"@type":"Person","name":"Andrea Poltronieri"},{"@type":"Person","name":"Delfina Sol Pandiani"},{"@type":"Person","name":"Maria Chiara Frangipane"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"https://popwords.github.io/asap.owl","image":"http://www.visualdataweb.de/webvowl/#iri=https://popwords.github.io/asap.owl","name":"ASAP Ontology - Analyze Speech Acts by Politicians", "headline":"Document describing the ontology https://popwords.github.io/asap.owl", "datePublished":"Mon Nov 25 14:43:46 CET 2019", "version":"1.0.0", "author":[{"@type":"Person","name":"Andrea Poltronieri"},{"@type":"Person","name":"Delfina Sol Pandiani"},{"@type":"Person","name":"Maria Chiara Frangipane"}]}</script>
 
 <script src="resources/jquery.js"></script>
 <script src="resources/marked.min.js"></script>
@@ -64,7 +64,7 @@ function loadTOC(){
 <dd>Andrea Poltronieri</dd><dd>Delfina Sol Pandiani</dd><dd>Maria Chiara Frangipane</dd>
 
 <dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="http://insertlicenseURIhere.org" target="_blank"><img src="https://img.shields.io/badge/License-license%20name%20goes%20here-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
-</dd><dt>Visualization:</dt><dd><a href="https://www.visualdataweb.de/webvowl/#iri=https://popwords.github.io/asap.owl" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
+</dd><dt>Visualization:</dt><dd><a href="http://www.visualdataweb.de/webvowl/#iri=https://popwords.github.io/asap.owl" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <dt>Cite as:</dt>
 <dd>Andrea Poltronieri,Delfina Sol Pandiani,Maria Chiara Frangipane. ASAP Ontology - Analyze Speech Acts by Politicians. Revision: 1.0.0. Retrieved from: https://popwords.github.io/asap.owl</dd>
 </dl>
@@ -369,7 +369,7 @@ This ontology has the following classes and properties.</span>
          <span>title</span>
       </a>
    </li>
-</ul><iframe align="center" width="100%" height ="500px" src="https://www.visualdataweb.de/webvowl/#iri=https://popwords.github.io/asap.owl"></iframe>
+</ul><iframe align="center" width="100%" height ="500px" src="http://www.visualdataweb.de/webvowl/#iri=https://popwords.github.io/asap.owl"></iframe>
 </div>
 
 
